[package]
name = "ogipkmngo"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
anyhow = "1"
pretty_env_logger = "0.4"
log = "0.4"
warp-reverse-proxy = "0.3"
mime = "0.3"
bytes = "1"
regex = "1"
